CUI: layer: add higher z-index for layer border to prevent it from being hidden (date-picker)

--- a/src/scss/themes/fylr/mixins/_layer.scss
+++ b/src/scss/themes/fylr/mixins/_layer.scss
@@ -26,5 +26,6 @@
 		right: 0;
 		bottom: 0;
 		pointer-events: none;
+		z-index: 1;
 	}
 }
